prevent scrolling overflow for now

--- a/frontend/assets/scss/main.scss
+++ b/frontend/assets/scss/main.scss
@@ -11,7 +11,7 @@ html {
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  min-height: 100%;
   background-color: $black-color;
 }
 
